--- a/app/views/admin/commodities/show.html.erb
+++ b/app/views/admin/commodities/show.html.erb
@@ -47,8 +47,8 @@
         </div>
             <% unless @product.image1.blank? %>
              <div class="column ">
-                <figure class="image is-hidden-mobile " style="height:800px" >
-                    <%= image_tag @product.image1,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9"  >
+                    <%= image_tag @product.image1%>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image1,style:"height:auto;width:100%" %>
@@ -57,8 +57,8 @@
             <% end %>
             <% unless @product.image2.blank?%>
             <div class="column ">
-                <figure class="image is-hidden-mobile" style="height:800px" >
-                    <%= image_tag @product.image2,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9"  >
+                    <%= image_tag @product.image2%>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image2,style:"height:auto;width:100%"%>
@@ -67,8 +67,8 @@
             <% end %>
             <% unless @product.image3.blank? %>
             <div class="column ">
-                <figure class="image is-hidden-mobile" style="height:800px">
-                    <%= image_tag @product.image3,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9" >
+                    <%= image_tag @product.image3%>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image3,style:"height:auto;width:100%"%>
@@ -77,8 +77,8 @@
             <% end %>
             <% unless @product.image4.blank?  %>
             <div class="column ">
-                <figure class="image is-hidden-mobile" style="height:800px">
-                    <%= image_tag @product.image4,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9" >
+                    <%= image_tag @product.image4%>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image4,style:"height:auto;width:100%" %>
