--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -48,8 +48,8 @@
         </div>
             <% unless @product.image1.blank? %>
              <div class="column ">
-                <figure class="image is-hidden-mobile " style="height:800px" >
-                    <%= image_tag @product.image1,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9" >
+                    <%= image_tag @product.image1 %>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image1,style:"height:auto;width:100%" %>
@@ -58,8 +58,8 @@
             <% end %>
             <% unless @product.image2.blank?%>
             <div class="column ">
-                <figure class="image is-hidden-mobile" style="height:800px" >
-                    <%= image_tag @product.image2,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9"  >
+                    <%= image_tag @product.image2 %>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image2,style:"height:auto;width:100%"%>
@@ -68,8 +68,8 @@
             <% end %>
             <% unless @product.image3.blank? %>
             <div class="column ">
-                <figure class="image is-hidden-mobile" style="height:800px">
-                    <%= image_tag @product.image3,style:"height:100%;width:auto" %>
+                <figure class="image is-hidden-mobile is-16by9" >
+                    <%= image_tag @product.image3 %>
                 </figure> 
                 <figure class="image is-hidden-desktop" >
                     <%= image_tag @product.image3,style:"height:auto;width:100%" %>
