--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-  <% if params[:action]== 'index'|| params[:action]=='brand'|| params[:action]=='designers' ||  params[:controller].split("/").first == 'users'%>
+  <% if params[:controller].split("/").first == 'admin'%>
     <div class="cssload-thecube">
     <div class="cssload-cube cssload-c1"></div>
     <div class="cssload-cube cssload-c2"></div>
@@ -21,7 +21,7 @@
     <div class="cssload-cube cssload-c3"></div>
     </div>
   <% end %>
-   <div id="<%= 'rails' if params[:action]=='index'|| params[:action]=='brand'|| params[:action]=='designers' || params[:controller].split("/").first == 'users'%>">
+   <div id="<%= 'rails' if params[:controller].split("/").first == 'admin'%>">
     <% if params[:controller].split("/").first == 'admin'%>
   	<%= render "admin_navbar" %>
     <% else %>
