--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -67,7 +67,21 @@
     </nav>
   </div>
 
-  <div class="hero-body" style="padding: 0px">
+<div class="hero-body">
+      <div class="container has-text-centered">
+      <p class="title is-2 has-text-left ">
+        一盒
+      </p>
+      <p class="is-8 has-text-left is-hidden-desktop">
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
+      </p>      
+      <br>
+      <p class="subtitle  is-6 has-text-left is-hidden-mobile">
+        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
+      </p>
+
+    </div>
+ <!--     
     <div class="w3-content w3-display-container" style="max-width:none">
       <%= image_tag brand.banner1 ,class:'mySlides fade', style:"width:100%" %>
       <%= image_tag brand.banner2 ,class:'mySlides fade', style:"width:100%" %>
@@ -80,7 +94,9 @@
         <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
       </div>
     </div>
+ -->   
   </div>
+
   <div class="hero-foot">
   <nav class="tabs is-boxed is-fullwidth">
     <div class="container">
