--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -118,10 +118,7 @@
 </section>
 
 <script >
-
-
-
-    var slideIndex = 1;
+   /* var slideIndex = 1;
 
     carousel();
 
@@ -167,7 +164,7 @@
       }
       x[slideIndex-1].style.display = "block";  
       dots[slideIndex-1].className += " w3-white";
-    };
+    };*/
 
     sqs_css="@media( max-width:768px ){ .sqs-container{position:absolute;top:10%;width:95%;}";
     sqs_title = "聯絡一盒";
