--- a/app/views/admin/commodities/index.html.erb
+++ b/app/views/admin/commodities/index.html.erb
@@ -36,18 +36,33 @@
 				  	<% type.products.each do |product| %>
 						    <div class="column is-3-desktop is-6-mobile " id="floatobject" style="padding: 3px">
 						    	<div class="card" id="floatobject2">
-						    		<div class="card-image">
+					    		<% if product.pictures_url(:thumb) %>
+						    		<div class="card-image ">
 						    			<figure class="image is-200x200 is-hidden-mobile" id="float" style="width:100%">
-						    				<%= link_to  admin_commodity_path(product) do%>
-						    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto' %>
+						    				<%= link_to  product_path(product) do%>
+						    				<%= image_tag product.pictures_url(:thumb),style:'height:100%;max-width:none;width:auto',class:'fimg' %>
 						    				<% end %>
 						    			</figure>
 						    			<figure class="image is-square is-hidden-desktop" id="float" style="width:100%">
-						    				<%= link_to  admin_commodity_path(product) do%>
-						    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto' %>
+						    				<%= link_to  product_path(product) do%>
+						    				<%= image_tag product.pictures_url(:thumb),style:'height:100%;max-width:none;width:auto' %>
 						    				<% end %>
 						    			</figure>				    			
-						    		</div>				    		
+						    		</div>	
+						    	<% else %>
+							    		<div class="card-image ">
+							    			<figure class="image is-200x200 is-hidden-mobile" id="float" style="width:100%">
+							    				<%= link_to  product_path(product) do%>
+							    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto',class:'fimg' %>
+							    				<% end %>
+							    			</figure>
+							    			<figure class="image is-square is-hidden-desktop" id="float" style="width:100%">
+							    				<%= link_to  product_path(product) do%>
+							    				<%= image_tag product.pictures,style:'height:100%;max-width:none;width:auto' %>
+							    				<% end %>
+							    			</figure>				    			
+							    		</div>						    					    			
+					    		<% end %>				    		
 				    		<div class="card-content is-size-7-mobile" style="padding-top: 0px">
 						    			<div class="column has-text-right">
 						    			<%= link_to  edit_admin_commodity_path(product) do%>
