--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@ html{
 $success:rgb(54,133,12);
 $danger:hsl(348, 100%, 50%);
 $gap: 32px;
+$mobile: 1100px;
 $fullhd:2200px ;
 $widescreen: 2000px + (2 * $gap) ;
 $dimensions: 16 24 32 48 64 96 128 200 230 256 272 318 350 512 1000;
