--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -69,14 +69,11 @@
 
 <div class="hero-body">
       <div class="container has-text-centered">
-      <p class="title is-2 has-text-left ">
+      <p class="title is-size-1 has-text-left ">
         一盒
-      </p>
-      <p class="is-8 has-text-left is-hidden-desktop">
-        一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
-      </p>      
-      <br>
-      <p class="subtitle  is-6 has-text-left is-hidden-mobile">
+      </p>   
+      <br> 
+      <p class="subtitle  is-size-6-desktop is-size-6-mobile has-text-left ">
         一個盒子，蘊含著我們對生活品質的想像，在手作的情感，與生活的溫度裡，裝載每份深刻。
       </p>
 
