--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             Be warm, be unique and out of box
           </p>
           <br>
-          <p class="is-size-7-mobile">web design by Fatmylin.</p>
+          <p class="is-size-7-mobile">web by Fatmylin.</p>
 
       </div>
     </footer>   
